--- a/src/sass/components/_panel-bar.scss
+++ b/src/sass/components/_panel-bar.scss
@@ -90,4 +90,38 @@
       }
     }
   }
+
+  .dots-main {
+    .dotAll {
+      display: flex;
+      flex-direction: row;
+      margin: 0;
+      padding: 0 0 0 1rem;
+      list-style: none;
+      background-color: #fff;
+      transform: translateY(10px);
+
+      .dot {
+        display: inline-block;
+        margin-left: 12px;
+        border: none;
+        display: block;
+        width: 13px;
+        height: 13px;
+        border-radius: 6px;
+        padding: 0;
+        outline: none;
+        background-color: #e1e1e1;
+        cursor: pointer;
+
+        &:hover {
+          background-color: $primary;
+        }
+      }
+
+      .active {
+        background-color: $primary;
+      }
+    }
+  }
 }
