--- a/src/partials/40_section-deals.html
+++ b/src/partials/40_section-deals.html
@@ -1,7 +1,7 @@
 <div class="section--deals">
   <div class="container">
     <div class="row ">
-      <div class="col-6">
+      <div class="col-xl-6 col-sm-12 col-lg-6">
         <div class="overlay">
           <div class="overlay-text">
             <h3>Guest room</h3>
@@ -11,7 +11,7 @@
         </div>
         <img class="bigImg" src="./images/sypialnia.jpg" alt="sorry..." />
       </div>
-      <div class="col-6">
+      <div class="col-xl-6 col-sm-12 col-lg-6">
         <div class="collections">
           <img src="./images/sofa.jpg" alt="sorry..." />
           <img src="./images/jadalnia.jpg" alt="sorry..." />
