Change product.js and added dots to carousel

--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -422,42 +422,14 @@
   width: 100%;
 }
 
-.carousel-1 .flickity-viewport {
-  height: 1200px;
-}
-
-.carousel-2 .flickity-viewport {
+.carousel-1 .flickity-viewport,
+.carousel-2 .flickity-viewport,
+.carousel-3 .flickity-viewport,
+.carousel-4 .flickity-viewport,
+.carousel-5 .flickity-viewport {
   height: 1200px;
 }
 
 .hide {
   display: none;
 }
-
-// .dots {
-//   ul {
-//     margin: 0;
-//     padding: 0 0 0 1rem;
-//     list-style: none;
-//     background-color: #ffffff;
-//     transform: translateY(15px);
-
-//     li {
-//       display: inline-block;
-//       margin-left: 0.5rem;
-
-//       a {
-//         display: block;
-//         width: 13px;
-//         height: 13px;
-//         border-radius: 6px;
-//         background-color: #e1e1e1;
-
-//         &.active,
-//         &:hover {
-//           background-color: $primary;
-//         }
-//       }
-//     }
-//   }
-// }
