new code in product.js

--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -69,9 +69,8 @@
         </div>
         <div class="col-sm-12 col-md-2 dots-main">
           <div class="dots" id="dots">
-            <button class="dot-first dot active"></button>
-            <button class="dot-second dot"></button>
-            <button class="dot-third dot"></button>
+            <button class="dot activer"></button> <button class="dot"></button>
+            <button class="dot"></button>
           </div>
         </div>
       </div>
