Add carousel for dots with new clicklistener and change class active

--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -69,7 +69,7 @@
         </div>
         <div class="col-sm-12 col-md-2 dots-main">
           <div class="dots" id="dots">
-            <button class="dot activer"></button> <button class="dot"></button>
+            <button class="dot products-active"></button> <button class="dot"></button>
             <button class="dot"></button>
           </div>
         </div>
