Changed class for dots in html and products.js

--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -69,8 +69,8 @@
         </div>
         <div class="col-sm-12 col-md-2 dots-main">
           <div class="dots" id=" dots">
-            <button class="dot dots-active-products"></button>
-            <button class="dot"></button> <button class="dot"></button>
+            <button class="dot-button dots-active-products"></button>
+            <button class="dot-button"></button> <button class="dot-button"></button>
           </div>
         </div>
       </div>
@@ -628,12 +628,15 @@
                       >
                     </div>
                   </div>
-                  <div class="stars">
-                    <a href="#" class="star-rated"></a>
-                    <a href="#" class="star-rated"></a>
-                    <a href="#" class="star-rated"></a>
-                    <a href="#" class="star-rated"></a>
-                    <a href="#" class="star-rated"></a>
+                  <div class="content">
+                    <h5>Aenean Ru Bristique</h5>
+                    <div class="stars">
+                      <a href="#" class="star full" data-star="1"></a>
+                      <a href="#" class="star full" data-star="2"></a>
+                      <a href="#" class="star" data-star="3"></a>
+                      <a href="#" class="star" data-star="4"></a>
+                      <a href="#" class="star" data-star="5"></a>
+                    </div>
                   </div>
                   <div class="line"></div>
                   <div class="actions">
