--- a/src/sass/components/_panel-bar.scss
+++ b/src/sass/components/_panel-bar.scss
@@ -118,7 +118,7 @@
       background-color: #fff;
       transform: translateY(10px);
 
-      .dot {
+      .dot-button {
         display: inline-block;
         margin-left: 12px;
         border: none;
