Fix section deals RWD on 320px

--- a/src/partials/40_section-deals.html
+++ b/src/partials/40_section-deals.html
@@ -2,14 +2,16 @@
   <div class="container">
     <div class="row ">
       <div class="col-xl-6 col-sm-12 col-lg-6">
-        <div class="overlay">
-          <div class="overlay-text">
-            <h3>Guest room</h3>
-            <h2>bed</h2>
-            <div class="discount">-20%</div>
+        <div class="hero-deal">
+          <div class="overlay">
+            <div class="overlay-text">
+              <h3>Guest room</h3>
+              <h2>bed</h2>
+              <div class="discount">-20%</div>
+            </div>
           </div>
+          <img class="bigImg" src="./images/sypialnia.jpg" alt="sorry..." />
         </div>
-        <img class="bigImg" src="./images/sypialnia.jpg" alt="sorry..." />
       </div>
       <div class="col-xl-6 col-sm-12 col-lg-6">
         <div class="collections">
