--- a/src/sass/components/_section--deals.scss
+++ b/src/sass/components/_section--deals.scss
@@ -1,12 +1,17 @@
 .section--deals {
   margin: 30px 0;
+  .hero-deal {
+    height: 500px;
+    width: inherit;
+    display: flex;
+    justify-content: center;
+  }
   .overlay {
     background-color: rgba(77, 77, 77, 0.719);
     position: absolute;
-    transform: translate(3%, 5%);
+    transform: translateY(5%);
     height: 90%;
     width: 90%;
-    padding-right: 10px;
     font-size: 36px;
     color: white;
     display: flex;
@@ -28,18 +33,21 @@
     }
   }
   .bigImg {
-    height: 500px;
+    height: 100%;
     width: inherit;
   }
 
   .collections {
     display: flex;
     flex-direction: column;
+    height: 500px;
+
     img {
-      height: 240px;
-      width: auto;
-      margin: 5px;
+      height: 48%;
       object-fit: cover;
+      &:first-child {
+        margin-bottom: 20px;
+      }
     }
   }
 }
